@@ -55,7 +55,7 @@ coxph <- function(formula, data, weights, subset, na.action,
     #  the model object for a user stuck in "+ cluster()" mode.
     if (missing(formula)) stop("a formula argument is required")
     
-    ss <- c("cluster", "offset")
+    ss <- "cluster"
     if (is.list(formula))
         Terms <- if (missing(data)) terms(formula[[1]], specials=ss) else
                  terms(formula[[1]], specials=ss, data=data)
@@ -66,38 +66,19 @@ coxph <- function(formula, data, weights, subset, na.action,
     if (length(tcl) > 1) stop("a formula cannot have multiple cluster terms")
 
     if (length(tcl) > 0) { # there is one
-        # subscripting of formulas is broken at least through R 3.5, if the
-        #  formula contains an offset.  Adding offset to the "specials" above
-        #  is just a sneaky way to find out if one is present, then call
-        #  reformulate ourselves.  tt is a correct index into the row labels
-        #  of the factors attribute, tt+1 to the variables attribute (which is
-        #  a list, so you have to skip the "list" call).  The term.labels attr
-        #  contains neither the response nor the offset, but does contain the
-        #  interactions, which we need.  
         factors <- attr(Terms, 'factors')
         if (any(factors[tcl,] >1)) stop("cluster() cannot be in an interaction")
         if (attr(Terms, "response") ==0)
             stop("formula must have a Surv response")
-        # reformulate with the response option puts ` ` around Surv, which messes
-        #  up evaluation, hence the fancy dance to replace a piece rather
-        #  than recreate
-        temp <- attr(Terms, "term.labels")
-        oo <- attr(Terms, 'specials')$offset
-        if (!is.null(oo)) {
-            # add the offset to the set of labels
-            ooterm <- rownames(factors)[oo]
-            if (oo < tcl) temp <- c(ooterm, temp)
-            else temp <- c(temp, ooterm)
-        }
+
         if (is.null(Call$cluster))
             Call$cluster <- attr(Terms, "variables")[[1+tcl]][[2]]
         else warning("cluster appears both in a formula and as an argument, formula term ignored")
-        if (is.list(formula)) 
-             formula[[1]][[3]] <- reformulate(temp[1-tcl])[[2]]
-        else formula[[3]]      <- reformulate(temp[1-tcl])[[2]]
 
-        Call$formula <- formula
-        
+        # [.terms is broken at least through R 4.1; use our
+        #  local drop.special() function instead. 
+        Terms <- drop.special(Terms, tcl)  
+        formula <- Call$formula <- formula(Terms)
     }
     
     # create a call to model.frame() that contains the formula (required)
@@ -922,7 +903,7 @@ We instead assume that nothing is reordered and do a shift.
 <<coxph-make-X>>=
 
 if (length(dropterms)) {
-    Terms2 <- Terms[ -dropterms]
+    Terms2 <- Terms[-dropterms]
     X <- model.matrix(Terms2, mf, constrasts.arg=contrast.arg)
     # we want to number the terms wrt the original model matrix
     temp <- attr(X, "assign")
